<resources>
    <string name="app_name">eCommerce</string>
    <string name="action_settings">Settings</string>
    <string name="finalizar_compra">Finalizar Compra</string>
    <string name="hint_nome">Nome *</string>
    <string name="hint_sobrenome">Sobrenome *</string>
    <string name="preencha_seus_dados">Preencha seus dados corretamente!</string>
    <string name="hint_email">E-mail *</string>
    <string name="hint_endereco">Endereço *</string>
    <string name="hint_numero">Número *</string>
    <string name="hint_bairro">Bairro *</string>
    <string name="hint_uf">UF *</string>
    <string name="hint_cidade">Cidade *</string>
    <string name="hint_endereco_faturamento">Utilizar este endereço para faturamento</string>
    <string name="alerta_obrigatorios">Atenção: os dados marcados com * são obrigatórios!</string>
    <string name="prosseguir">Prosseguir</string>
    <string name="entrega_economica">Entrega Econômica</string>
    <string name="entrega_economica_prazo">Grátis - Entrega em até 10 dias úteis</string>
    <string name="entrega_sedex">Sedex</string>
    <string name="entrega_sedex_prazo">R$ 41,35 - Entrega em até 4 dias úteis</string>
    <string name="escolha_forma_pagamento">Escolha a forma de pagamento para concluir seu pedido</string>
    <string name="forma_pagamento_boleto">Boleto Bancário</string>
    <string name="hint_data_validade">Validade</string>
    <string name="hint_codigo_seguranca">CVV</string>
    <string name="forma_pagamento_transf">Transferência Bancária</string>
    <string name="alerta_confirma">Seu pedido foi confirmado e logo será liberado para processamento. Aguarde mais informações em seu e-mail.</string>
    <string name="dados_pessoais">Dados pessoais</string>
    <string name="forma_envio">Forma de envio</string>
    <string name="forma_pagamento">Forma de pagamento</string>
    <string name="obrigado_compra">Obrigado por sua compra! :)</string>
    <string name="carrinho_compras">Carrinho de compras</string>
    <string name="forma_pagamento_cartao">Cartão de Crédito</string>
    <string name="hint_numerocartao">Número do Cartão</string>
    <string name="selecionar_envio">Selecionar forma de envio</string>
    <string name="selecionar_pagamento">Selecionar Forma de Pagamento</string>
    <string name="confirmar_pagamento">Confirmar Pagamento</string>
    <string name="msg_erro_email_invalido">E-mail inválido</string>
    <string name="msg_erro_preencha_nome">Preencha o nome</string>
    <string name="msg_erro_preencha_sobrenome">Preencha o sobrenome</string>
    <string name="msg_erro_preencha_endereco">Preencha o endereço</string>
    <string name="msg_erro_preencha_bairro">Preencha o bairro</string>
    <string name="msg_erro_preencha_cidade">Preencha a cidade</string>
    <string name="msg_erro_codigo_invalido">Código de Verificação inválido</string>
    <string name="msg_erro_data_invalida">Data inválida</string>
    <string name="msg_erro_numero_cartao">Número do Cartão inválido</string>
    <string name="item_carrinho_compra">Item do carrinho de compra</string>
    <string name="foto_item_compra">Foto do item de compra</string>
    <string name="dados_entrega">Dados para a entrega</string>
    <string name="dados_cartao">Dados do Cartão de Crédito</string>
    <string name="hint_nome_cartao">Nome (como consta no cartão)</string>
    <string name="compra_finalizada">Compra finalizada com sucesso</string>
</resources>
