<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.PagamentoActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/text_margin"
        android:paddingRight="@dimen/text_margin">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/escolha_forma_pagamento" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fab_margin"
            android:contentDescription="@string/selecionar_pagamento">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="@dimen/fab_margin"
                android:focusable="true">
                <RadioButton
                    android:id="@+id/rbBoletoBancario"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/forma_pagamento_boleto"
                    android:labelFor="@id/rbBoletoBancario" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="@dimen/fab_margin"
                android:focusable="true">
                <RadioButton
                    android:id="@+id/rbCartaoCredito"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/forma_pagamento_cartao"
                    android:labelFor="@id/rbCartaoCredito" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llDadosCartao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:weightSum="1"
                android:visibility="gone"
                android:contentDescription="@string/dados_cartao">

                <EditText
                    android:id="@+id/nomeCartao"
                    android:theme="@style/AppMaterialTheme.Input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAllCaps="true"
                    android:hint="@string/hint_nome_cartao" />

                <EditText
                    android:id="@+id/numeroCartao"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="0123456789 "
                    android:maxLength="19"
                    android:hint="@string/hint_numerocartao" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <EditText
                        android:id="@+id/dataValidade"
                        android:theme="@style/AppMaterialTheme.Input"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="5"
                        android:maxLength="5"
                        android:digits="1234567890/"
                        android:layout_alignParentLeft="true"
                        android:hint="@string/hint_data_validade" />

                    <EditText
                        android:id="@+id/codigoSeguranca"
                        android:theme="@style/AppMaterialTheme.Input"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="3"
                        android:maxLength="3"
                        android:digits="1234567890"
                        android:layout_alignParentRight="true"
                        android:hint="@string/hint_codigo_seguranca" />

                </RelativeLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="@dimen/fab_margin"
                android:focusable="true">
                <RadioButton
                    android:id="@+id/rbTransfBancaria"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/forma_pagamento_transf"
                    android:labelFor="@id/rbTransfBancaria" />
            </LinearLayout>


        </RadioGroup>
    </LinearLayout>


    <Button
        android:id="@+id/btnConfirmarPagamento"
        android:theme="@style/ThemeOverlay.MyDarkButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirmar_pagamento"
        app:layout_constraintBottom_toBottomOf="parent" />

</android.support.constraint.ConstraintLayout>